fixed the alignment again

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -336,7 +336,7 @@ input::placeholder {
 @media (min-width: 1024px) {
   /* Adjust breakpoint as needed */
   .max-w-7xl {
-    max-width: 82% !important;
+    max-width: 96% !important;
   }
 }
 
